--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,9 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=eLT_2012.03.04_2.0.05.exe&can=2&q=#makechanges 2.0.05 2012.03.04]
+    * - Исправлен расчет расширения таргетов (mgp_TargetPlus)
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=eLT_2012.02.29_2.0.04.exe&can=2&q=#makechanges 2.0.04 2012.02.28]
     * - Прошло много изменений. 
         * = Перешли на инсталлятор NSIS 
